--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="raph.ico" type="image/x-icon"/>
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CODECHUM QUICKIE</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -15,16 +16,25 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </head>
+<style>
+    body {
+        background-image: url('bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+       
+    }
+</style>
+
 
 <body>
-    <h1 class="text-center p-4">RAPH GWAPITO CODECHUM QUICKIE LINKS</h1>
+    <h1 class="text-center p-4 fw-bolder">RAPH GWAPITO CODECHUM QUICKIE LINKS</h1>
     <div class="container pt-3">
         <div class="row"
             id="content"></div>
     </div>
 </body>
 
-<div class="accordion"
+<div class="accordion "
     id="accordionExample">
 </div>
 
@@ -42,7 +52,7 @@
         // Assuming Programming_2 is an object with university_lessons as an array of categories
         $.each(Programming_2.university_lessons, function (index, category) {
             var categoryHTML = '<div class="category p-4 col-lg-4">' +
-                '<h2>' + category.name + '</h2>' +
+                '<h2 class="" style="color: #fff">' + category.name + '</h2>' +
                 '<ul class="topics">';
 
             // Initialize links and accordions for each category
