SHOUT OUT TO MY IDOL

--- a/index.html
+++ b/index.html
@@ -2,7 +2,44 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="raph.ico" type="image/x-icon"/>
+
+    <!-- Primary Meta Tags -->
+    <title>Code Chum Quickie Problems to solve wohhhhhhhhhhhhh</title>
+    <meta name="title"
+        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
+    <meta name="description"
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type"
+        content="website" />
+    <meta property="og:url"
+        content="https://metatags.io/" />
+    <meta property="og:title"
+        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
+    <meta property="og:description"
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+    <meta property="og:image"
+        content="bg.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card"
+        content="summary_large_image" />
+    <meta property="twitter:url"
+        content="https://metatags.io/" />
+    <meta property="twitter:title"
+        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
+    <meta property="twitter:description"
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+    <meta property="twitter:image"
+        content="bg.jpg" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
+
+    <link rel="icon"
+        href="raph.ico"
+        type="image/x-icon" />
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
@@ -21,7 +58,7 @@
         background-image: url('bg.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-       
+
     }
 </style>
 
