Privacy concerns - idol gihapon nakos raph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title"
         content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
     <meta name="description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!!" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type"
@@ -18,7 +18,7 @@
     <meta property="og:title"
         content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
     <meta property="og:description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!!" />
     <meta property="og:image"
         content="bg.jpg" />
 
@@ -30,7 +30,7 @@
     <meta property="twitter:title"
         content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
     <meta property="twitter:description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!! AKA: Raphael Jude Alvarado" />
+        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!" />
     <meta property="twitter:image"
         content="bg.jpg" />
 
@@ -64,6 +64,7 @@
 
 <body>
     <h1 class="text-center p-4 fw-bolder">RAPH GWAPITO CODECHUM QUICKIE LINKS</h1>
+    <p class="text-center">login to your codechum before opening the links !</p>
     <div class="container pt-3">
         <div class="row"
             id="content"></div>
