--- a/index.html
+++ b/index.html
@@ -2,232 +2,70 @@
 <html lang="en">
 
 <head>
-
-    <!-- Primary Meta Tags -->
-    <title>Code Chum Quickie Problems to solve wohhhhhhhhhhhhh</title>
-    <meta name="title"
-        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
-    <meta name="description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!!" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type"
-        content="website" />
-    <meta property="og:url"
-        content="https://metatags.io/" />
-    <meta property="og:title"
-        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
-    <meta property="og:description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!!!" />
-    <meta property="og:image"
-        content="bg.jpg" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card"
-        content="summary_large_image" />
-    <meta property="twitter:url"
-        content="https://metatags.io/" />
-    <meta property="twitter:title"
-        content="Code Chum Quickie Problems to solve wohhhhhhhhhhhhh" />
-    <meta property="twitter:description"
-        content="CodeChum-Quickie-Problems FOR BSCS STUDENTS SHOUT- OUT DOYDOY!!!!!!!!" />
-    <meta property="twitter:image"
-        content="bg.jpg" />
-
-    <!-- Meta Tags Generated with https://metatags.io -->
-    <audio loop
-        autoplay>
-        <source src="/papuri-sa-diyos-remix.mp3"
-            type="audio/filetype">
-    </audio>
-
-    <link rel="icon"
-        href="raph.ico"
-        type="image/x-icon" />
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>CODECHUM QUICKIE</title>
+    <title>CodeShum Quickie Links</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@1.14.0/dist/full.css"
+        rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </head>
-<style>
-    body {
-        background: url('bg.jpg') no-repeat center/cover;
-    }
 
-    .rainbow {
-        animation: rainbow 30s linear;
-        animation-iteration-count: infinite;
-        text-shadow: 0 0 4px #ea17bf;
-    }
+<body class="bg-gray-900 text-white">
+    <header class="bg-gray-800 p-3">
+        <div class="container mx-auto flex flex-wrap items-center justify-center lg:justify-between">
+            <div class="flex-1">
+                <a href="index.html"
+                    class="btn btn-ghost text-xl">Code Shum Quickie</a>
+            </div>
+            <ul class="nav w-full lg:w-auto flex justify-center lg:justify-start space-x-4">
+                <li><a href="c.html"
+                        class="btn btn-ghost text-white">C</a></li>
+                <li><a href="cpp.html"
+                        class="btn btn-ghost text-white">C++</a></li>
+                <li><a href="csharp.html"
+                        class="btn btn-ghost text-white">C#</a></li>
+                <li><a href="java.html"
+                        class="btn btn-ghost text-white">Java</a></li>
+                <li><a href="python.html"
+                        class="btn btn-ghost text-white">Python</a></li>
+                <li><a href="web.html"
+                        class="btn btn-ghost text-white">WEB</a></li>
+                <li><a href="sql.html"
+                        class="btn btn-ghost text-white">MySQL</a></li>
+            </ul>
+        </div>
+    </header>
 
-    @keyframes rainbow {
+    <div class="hero min-h-screen"
+        style="background-image: url(assets/img/background.jpg);">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-md">
+                <h1 class="text-5xl font-bold">CODESHUM QUICKIE LINKS</h1>
+                <p class="py-6">Login to your CodeShum before opening the links!</p>
 
-        100%,
-        0% {
-            color: rgb(255, 0, 0);
-        }
-
-        8% {
-            color: rgb(255, 127, 0);
-        }
-
-        16% {
-            color: rgb(255, 255, 0);
-        }
-
-        25% {
-            color: rgb(127, 255, 0);
-        }
-
-        33% {
-            color: rgb(0, 255, 0);
-        }
-
-        41% {
-            color: rgb(0, 255, 127);
-        }
-
-        50% {
-            color: rgb(0, 255, 255);
-        }
-
-        58% {
-            color: rgb(0, 127, 255);
-        }
-
-        66% {
-            color: rgb(0, 0, 255);
-        }
-
-        75% {
-            color: rgb(127, 0, 255);
-        }
-
-        83% {
-            color: rgb(255, 0, 255);
-        }
-
-        91% {
-            color: rgb(255, 0, 127);
-        }
-    }
-</style>
+                <div class="mockup-code mb-3 w-[400px]">
+                    <pre data-prefix="$"><code>scrap-website --url "codeshum.com"</code></pre>
+                    <pre data-prefix=">"
+                        class="text-warning"><code>Scraping website...</code></pre>
+                    <pre data-prefix=">"
+                        class="text-warning"><code>Extracting content...</code></pre>
+                    <pre data-prefix=">"
+                        class="text-info"><code>Creating free version...</code></pre>
+                    <pre data-prefix=">"
+                        class="text-success"><code>Done! Enjoy free CodeShum Problems</code></pre>
+                </div>
 
 
-<body>
-
-    <div class="container pt-3 text-center">
-        <h1 class="text-center"
-            style="color: #fff; text-shadow: 0 0 4px #ea17bf;">RAPH GWAPITO CODECHUM QUICKIE LINKS</h1>
-        <p class="text-center fw-bolder">login to your codechum before opening the links !</p>
-        <h1 id="verse"
-            class="rainbow"></h1>
-        <h3 id="ref"
-            class="rainbow"></h3>
-        <div class="row"
-            id="content"></div>
+                <a href="c.html"
+                    class="btn btn-primary">Get Started</a>
+            </div>
+        </div>
     </div>
 </body>
-
-<div class="accordion "
-    id="accordionExample">
-</div>
-
-
-
-<script src="prog_1.js"></script>
-<script src="prog_2.js"></script>
-<script src="data_strct.js"></script>
-
-<script>
-    $(document).ready(function () {
-
-        const data = [
-            prog_1,
-            prog_2,
-            data_strct
-        ]
-
-        var links = "";
-        var accordions = "";
-
-        $.each(data, function (index, course) {
-
-            $.each(course.university_lessons, function (index, category) {
-
-                links = "";
-                accordions = "";
-
-                $.each(category.university_topics, function (i, topic) {
-                    if (topic.practice_problems.length !== 0) {
-
-                        links = "";
-                        $.each(topic.practice_problems, function (i, problem) {
-                            links += '<li><a target="_blank" href="https://citu.codechum.com/student/study-area/' + problem.id + '">' + problem.name + '</a></li>';
-                        });
-
-                        accordions += '<div class="accordion-item">' +
-                            '<h2 class="accordion-header">' +
-                            '<button class="accordion-button collapsed" ' +
-                            'type="button" ' +
-                            'data-bs-toggle="collapse" ' +
-                            'data-bs-target="#acc' + topic.id + '">' + topic.name +
-                            '</button>' +
-                            '</h2>' +
-                            '<div id="acc' + topic.id + '" ' +
-                            'class="accordion-collapse collapse" ' +
-                            `data-bs-parent="#accordion${category.id}">` +
-                            '<div class="accordion-body">' +
-                            '<ul class="practice-problems">' +
-                            links +
-                            '</ul>' +
-                            '</div>' +
-                            '</div>' +
-                            '</div>';
-                    }
-                });
-
-                var categoryHTML = `<div class=" col-lg-4">
-                                        <div class="card-body">
-                                            <h2 class="card-title" style="color: #fff; text-shadow: 0 0 4px #00FF9C;">${category.name}</h5>
-                                            <p class="card-text">
-                                                <div class="accordion" id="accordion${category.id}">
-                                                    ${accordions}
-                                                </div>
-                                            </p>
-                                        </div>
-                                    </div>`
-
-                $('#content').append(categoryHTML);
-            });
-        });
-        getBibleVerse();
-    });
-
-
-    function getBibleVerse() {
-        $.ajax({
-            url: "https://bible-api.com/?random=verse",
-
-            dataType: "jsonp",
-            success: function (data) {
-                $("#verse").text('"' + data.text + '"');
-                $("#ref").text(data.reference);
-            }
-
-        });
-    }
-
-
-</script>
 
 <!-- Google tag (gtag.js) -->
 <script async
