added meta tags

--- a/c.html
+++ b/c.html
@@ -5,12 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>CodeShum Quickie Links</title>
+    <title>CodeShum Quickie - C Language</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css"
         rel="stylesheet"
         type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <title>CodeShum Quickie Practice Problems</title>
+    <meta name="title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta name="description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+
+    <meta property="og:type"
+        content="website" />
+    <meta property="og:url"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/" />
+    <meta property="og:title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta property="og:description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+    <meta property="og:image"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/assets/img/meta.png" />
+
+    <meta property="twitter:card"
+        content="summary_large_image" />
+    <meta property="twitter:url"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/" />
+    <meta property="twitter:title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta property="twitter:description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+    <meta property="twitter:image"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/assets/img/meta.png" />
 </head>
 
 <body class="bg-gray-00 text-white">
